# polars-country

./: .actrc  .gitignore  Cargo.toml  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/polars_country/: __init__.py  _polars_country.pyi
python/tests/: test_geo_country.py  test_polars_country.py
src/: lib.rs
