[package]
name = "geo_country"
version = "0.1.0"
edition = "2021"

[lib]
name = "geo_country"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-polars = { version = "0.27", features = ["derive"] }
polars-core = { version = "0.54", default-features = false }
country-boundaries = "1.2"

[profile.release]
opt-level = 3
strip = "symbols"
