[package]
name = "polars_country"
version = "0.2.0"
edition = "2024"

[lib]
name = "polars_country"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-polars = { version = "0.27", features = ["derive"] }
polars-core = { version = "0.54", default-features = false }
country-boundaries = "1.2"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
